2008-09-23  Martin Nordholts  <martinn@svn.gnome.org>

	* release-notes/gimp-2.6.htrw (Miscellaneous): New section
	containing basic references to the GVfs URI plug-in problem and
	the Script-Fu change that breaks a lot of scripts.

2008-09-23  Martin Nordholts  <martinn@svn.gnome.org>

	* release-notes/gimp-2.6.htrw (What's Planned): New
	section. Mention GSoC 2008 projects and continued GEGL
	integration.

2008-09-23  Martin Nordholts  <martinn@svn.gnome.org>

	* release-notes/images/2.6-scroll-beyond-border.png: Fix
	transparency.

2008-09-23  Martin Nordholts  <martinn@svn.gnome.org>

	* release-notes/gimp-2.6.htrw (Installation): Removed, wasn't part
	of the 2.4 release notes and indeed doesn't fit in the release
	notes of a stable release.

2008-09-23  Martin Nordholts  <martinn@svn.gnome.org>

	* release-notes/images/2.6-experimental-gegl-tool.png: Screenshot
	of on-canvas preview of gaussian blur with GEGL tool.

	* release-notes/gimp-2.6.htrw (Under the Hood/GEGL): Add and refer
	to it here.

2008-09-23  Martin Nordholts  <martinn@svn.gnome.org>

	* release-notes/images/2.6-scroll-beyond-border.png: New image
	illustrating scroll-beyond-border. I wouldn't mind tips from
	people with illustrative talent on how to improve it.

	* release-notes/gimp-2.6.htrw
	(User Interface/Ability to Scroll Beyond Image Border): Add the
	image here.

2008-09-23  Martin Nordholts  <martinn@svn.gnome.org>

	* release-notes/gimp-2.6.htrw (Under the Hood/GEGL):
	Rewritten. Mention the ported color operations and the
	experimental GEGL Operation tool.

	(Under the Hood/Minor Changes): New section, mention that many
	widgets have been ported to cairo.

2008-09-22  Martin Nordholts  <martinn@svn.gnome.org>

	* release-notes/images/2.6-brush-dynamics.jpg: New image by Alexia
	Death illustrating the brush dynamics.

	* release-notes/gimp-2.6.htrw (Tools/Brush Dynamics): Include the
	image here.

2008-09-22  Martin Nordholts  <martinn@svn.gnome.org>
