@@ -1,5 +1,17 @@
 2008-09-23  Martin Nordholts  <martinn@svn.gnome.org>
 
+	* release-notes/images/2.6-lgm-2008-groupshot.jpg: A 34kb big,
+	480px wide shot of the GIMP hackers, taken at LGM 2008 by
+	Garret LeSage, licenced under CC-By:
+	http://creativecommons.org/licenses/by/2.0/deed.en
+
+	* style/wgo.css: Added new img.groupshot class for the new image.
+
+	* release-notes/gimp-2.6.htrw (We Hope You Enjoy GIMP 2.6!): New
+	section at the end, containing the image and some text.
+
+2008-09-23  Martin Nordholts  <martinn@svn.gnome.org>
+
 	* release-notes/gimp-2.6.htrw (Miscellaneous): New section
 	containing basic references to the GVfs URI plug-in problem and
 	the Script-Fu change that breaks a lot of scripts.
